# playgrounds

./: .gitignore  README.md  package.json
aws-ebs/: README.md
aws-ebs/nodeAndDynamo/: readme.md
cloudformations/: Readme.MD  template-and-stack.yml  tp1-param-override.json  tp1-template-and-stack-params.json  tp1-template-and-stack.yml  tp2-rds-cf.yml
commands/: aws-cli.md
docker/: docker-compose.yml
java/Proj1Fun/: settings.gradle
jest/: .prettierrc  jest.config.js  package-lock.json  tsconfig.json
kinesis/plainLambdaKinesis/: README.md  cf1.json
kinesis/sls-kinesis-http/: README.md  serverless.yml
mysql/: proc_and_events.sql
py/: package-lock.json  package.json
py/mathpy/: pyproject.toml
py/mathpy/image_translation/: chatgptgen.py  claudeai-gen.py  copilot-gen.py  gemini-gen.py  llama3dev-gen.py  metaai-gen.py  webllmai-gen.py
py/mathpy/mathpy/: graphone.py
py/test-venv-1/: README.md  app.py  handler.py  package-lock.json  requirements.txt  serverless.yml
sls-js/ts-kinsesis/: package-lock.json  package.json  serverless.yml
src/__tests__/: tryAxios.test.ts  utils.test.ts
src/merging/: consumer.ts  map.ts  observable.ts
src/misc/: logs.ts  node-bunyan-log.js
src/types/: kaop.d.ts
terraform/: README.md
terraform/lesson-01-02/: readme.md
terraform/py-lambda-tf/: cloudwatch.tf  iam.tf  lambda.tf  main.tf  readme.md
timescaledb/: README.md
ts/ng-p1/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
ts/reactapp-p1/: README.md  package-lock.json  package.json
ts/simple-sls/: .eslintrc  package-lock.json  (+3 more)
(+25 files in other folders)
