[tool.poetry]
name = "mathpy"
version = "0.1.0"
description = ""
authors = ["Eugen Burianov <eburianv@deliverr.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scipy = "^1.13.0"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
ffmpeg = "^1.4"
ffmpeg-python = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
